# MusicGuess

./: .gitignore  NonUiLog.py  UiLog.py  __init__.py  app.py  crawler.py  pyproject.toml  requirements.txt
static/css/: home.css  single.css
static/js/: FormSubmit.js  SingleStart.js
static/quest_bank/: quest_phigros.xlsx
static/song_bank/: song_bank.xlsx
templates/: home.html  single.html
