[project]
name = "musicguess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6",
    "fake-useragent==2.2.0",
    "flask==3.1.0",
    "gputil==1.4.0",
    "html5lib==1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml==5.4.0",
    "markupsafe==3.0.2",
    "numpy==2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prettytable==3.16.0",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "requests==2.32.3",
    "setuptools==80.4.0",
    "six==1.17.0",
    "soupsieve==2.7",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
]
